Fixed sidebar tab wrapping behavior

--- a/src/scss/quadrone/actors.scss
+++ b/src/scss/quadrone/actors.scss
@@ -170,12 +170,6 @@
         padding-bottom: var(--t5e-size-6x);
       }
 
-      .sidebar-tab-strip {
-        .tab-option {
-          flex: 1;
-        }
-      }
-
       >.tidy-tab {
         flex: 1;
         overflow-y: auto;
